<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="120dp"
                android:background="@drawable/my_curstom_border">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/textView4"
        android:layout_above="@+id/list_item_button"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/city"
        android:id="@+id/textView3"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/birthdate"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"/>

    <TextView
        android:id="@+id/tx_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_above="@+id/textView3"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5">
    </TextView>

    <TextView
        android:id="@+id/tx_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/tx_birthdate"
        android:layout_alignLeft="@+id/tx_name"
        android:layout_alignStart="@+id/tx_name">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/tx_birthdate"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/tx_city"
        android:layout_alignStart="@+id/tx_city"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_button"
        android:id="@+id/list_item_button"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="12dp"/>


</RelativeLayout>