<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="2.1"
        android:orientation="vertical"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--for intent values-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient"
            style="?android:listSeparatorTextViewStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nomePaziente"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cittàPaziente"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_birthPaziente"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_mess_descr"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="0.9"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/customborder">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dest_string"
            style="?android:listSeparatorTextViewStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nomedest"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <!--
        <EditText
            android:id="@+id/edit_texto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="Escreva que gostaria de nos dizer"
            android:inputType="text|textMultiLine"
            android:gravity="top"/>-->

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/message_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textMultiLine"
            android:lines="20"
            android:minLines="15"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/white"
            android:hint="@string/write_mess_hint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_message"
            android:text="@string/btn_send_string"/>

    </LinearLayout>



</LinearLayout>
